
- #10986: Add Scanf.sscanf_opt, Scanf.bscanf_opt and Scanf.scanf_opt.
  (Nicolás Ojeda Bär, review by Florian Angeletti and Gabriel Scherer)

* #11157: Rename "hash" in the "Hashtbl.SeededHashedType" signature to
  "seeded_hash". This allows defining both seeded and unseeded hash functions in
  the same module.
  (Nicolás Ojeda Bär, review by Gabriel Scherer and Xavier Leroy)

### Other libraries:

* #9071, #9100, #10935: Reimplement `Thread.exit()` as raising the
  exception `Thread.Exit`, and mark `Thread.exit` as deprecated.
  The new implementation changes the behavior compared with
  the OCaml 4 implementation.  For example, the new implementation
  causes `Fun.finally` finalizers to be run and catch-all exception
  handlers to prevent termination.
  (Jacques-Henri Jourdan and Xavier Leroy, review by Damien Doligez,
  Guillaume Munch-Maccagnoni, Gabriel Scherer, and Enguerrand Decorne)

- #11034: Dynlink library, add a global lock to make dynlinking
  thread-safe.
  (Florian Angeletti, review by Gabriel Scherer)

- #11087: deprecate Thread.wait_timed_read, Thread.wait_timed_write,
  Thread.select, Thread.wait_pid. The same functionality is available in the
  Unix module.
  (Nicolás Ojeda Bär, review by Anil Madhavapeddy)

### Tools:

* #11004: Litmus tests for checking the implementation of the
  memory model.
  (Luc Maranget, review by Gabriel Scherer and Xavier Leroy)

- #11024: Handle alerts in ocamldoc.
  The alert `[@@alert deprecated]` is handled specifically and it's no longer
  needed to duplicate the deprecated annotation (the alert for the compiler and
  the tag for the documentation). Every other alerts also appear in the
  documentation.
  (Jules Aguillon, review by Florian Angeletti)

- #11079: Add the -nobanners option to dumpobj.
  (Sébastien Hinderer, review by Gabriel Scherer and Vincent Laviron)

- #11100: Fix ocamltest to make sure failed tests are not counted as
  "unexpected error".
  (Damien Doligez, review by Sébastien Hinderer)
