@@ -125,6 +125,9 @@ Working version
   the same module.
   (Nicolás Ojeda Bär, review by Gabriel Scherer and Xavier Leroy)
 
+- #8878: Add String.hash and String.seeded_hash.
+  (Tom Kelly, review by Alain Frisch and Nicolás Ojeda Bär)
+
 ### Other libraries:
 
 * #9071, #9100, #10935: Reimplement `Thread.exit()` as raising the
